k8s_config_files/sentiment-analysis-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-sentiment-analysis-ingress
spec:
  defaultBackend:
    service:
      name: ml-sentiment-analysis-service
      port:
        number: 8001
